getExamById and getAllExams added
