# APIDocumentation.yml
@@ -56,6 +56,74 @@ paths:
       security:
         - access_token: []
 
+  /admin/exam/{examId}:
+    get:
+      tags:
+        - Exams
+      summary: Get an exam by ID
+      description: This endpoint will provide details of an exam for a given exam ID.
+      operationId: getExamById
+      parameters:
+        - name: examId
+          in: path
+          description: ID of the Exam
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Exam fetched successfully.
+          content:
+            application/json:
+              schema:
+                properties:
+                  status:
+                    type: string
+                    example: "OK"
+                  message:
+                    type: string
+                    example: "Exam Fetched."
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Exam'
+        '400':
+          description: Invalid ID supplied or ID missing
+        '404':
+          description: Exam ID is not found.
+      security:
+        - access_token: [ ]
+
+  /admin/all-exams:
+    get:
+      tags:
+        - Exams
+      summary: Get all exams
+      description: This endpoint will provide details of all exams of the system.
+      operationId: getAllExams
+      responses:
+        '200':
+          description: Exams fetched successfully.
+          content:
+            application/json:
+              schema:
+                properties:
+                  status:
+                    type: string
+                    example: "OK"
+                  message:
+                    type: string
+                    example: "Exams Fetched."
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Exam'
+        '404':
+          description: Exams not found.
+      security:
+        - access_token: [ ]
+
   /admin/login:
     post:
       tags:
